# leo

./: .all-contributorsrc  .codecov.yml  .env  .gitattributes  .gitignore  .gitmodules  .licenserc.json  .markdownlint.yaml  .mlc_config.json  .rustfmt.toml  .rusty-hook.toml  .travis.yml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEVELOPMENT.md  FAQ.md  FAQs.md  Leo.toml  README.md  RELEASING.md  SECURITY.md  bors.toml  build.rs  cover.bat  cover.sh  covered.yml  crates.js  flake.nix  help.html  index.html  notes  numbers.csv  release-plz.toml  rustfmt.toml  search-index.js  settings.html  simple.leo  (+9 more)
asg/: Cargo.toml  README.md
asg-passes/: Cargo.toml
asg-passes/constant-folding/: Cargo.toml
asg-passes/constant-folding/src/: lib.rs
asg-passes/src/: lib.rs
asg-passes/src/asg_printing/: mod.rs
asg-passes/src/constant_folding/: mod.rs
asg-passes/src/dead_code_elimination/: mod.rs
asg-passes/src/dotify/: dotgraph.rs  dotifier.rs  expression.rs  mod.rs  program.rs  statement.rs
asg/src/: const_value.rs  context.rs  import.rs  input.rs  lib.rs  node.rs  pass.rs  prelude.rs  scope.rs  type_.rs  variable.rs
asg/src/accesses/: array_access.rs  array_range_access.rs  circuit_access.rs  constant_access.rs  mod.rs  named_access.rs  struct_access.rs  tuple_access.rs  value_access.rs
asg/src/checks/: mod.rs  return_path.rs
asg/src/error/: mod.rs
asg/src/expression/: accesses.rs  array_access.rs  array_init.rs  array_inline.rs  array_range_access.rs  binary.rs  call.rs  cast.rs  circuit_access.rs  circuit_init.rs  conditional.rs  constant.rs  err.rs  lengthof.rs  mod.rs  named_type.rs  sizeof.rs  struct_init.rs  ternary.rs  tuple_access.rs  tuple_init.rs  (+2 more)
asg/tests/: mod.rs
ast/: Cargo.toml  README.md
ast-passes/: Cargo.toml  README.md
ast-passes/src/: lib.rs
ast/benches/: ast.rs  leo_ast.rs  many_assigns.leo
ast/src/: annotation.rs  ast.rs  ast_for_statement.rs  expression.rs  file.rs  leo.pest  lib.rs  main.rs  node.rs  pass.rs  program.rs  span.rs
ast/tests/: expression.rs  function.rs  mod.rs  tuple.rs
compiler/: Cargo.toml  README.md  simple.leo  simple_import.leo
compiler/_otests/: mod.rs
compiler/abi-types/: Cargo.toml
compiler/ast/: Cargo.toml  README.md
compiler/ast-passes/: Cargo.toml  README.md
compiler/compiler/: Cargo.toml  README.md  build.rs
compiler/core/: Cargo.toml  README.md
compiler/corelib/: Cargo.toml
compiler/imports/: Cargo.toml  README.md
compiler/input/: Cargo.toml  README.md
compiler/linter/: Cargo.toml
compiler/otests/: mod.rs
compiler/parser/: Cargo.toml  README.md  default.profraw
compiler/parser-lossless/: Cargo.toml  README.md  build.rs
compiler/parser-rowan/: Cargo.toml
compiler/parser-translate/: Cargo.toml
compiler/passes/: Cargo.toml  README.md
compiler/span/: Cargo.toml  README.md
compiler/src/: ast.rs  compiler.rs  import_tests.rs  imports.rs  leo-inputs.pest  leo.pest  lib.rs  option.rs  phase.rs  stage.rs  test.rs  types.rs  types_display.rs  types_from.rs
compiler/stdlib/: Cargo.toml
compiler/tests/: mod.rs  test.rs
compiler/wasm/: Cargo.toml  README.md
core/: Cargo.toml
core/src/: core_circuit.rs  lib.rs
errors/: Cargo.toml  ERROR_INDEX.md  README.md
errors/src/: lib.rs
formatter/: Cargo.toml
formatter/src/: composite.rs  consts.rs  formatter.rs  global_const.rs  lib.rs  mapping.rs  module.rs  non_semantics.rs  storage.rs  test_macro.rs  test_utils.rs  utils.rs
gadgets/: Cargo.toml  README.md
gadgets/benches/: integer_arithmetic.rs
gadgets/src/: lib.rs
gadgets/tests/: mod.rs
grammar/: .gitattributes  Cargo.toml  FORMAT_ABNF_GRAMMAR.md  FORMAT_ABNF_GRAMMER.md  README.md  abnf-grammar.md  abnf-grammar.txt  format-abnf-grammar.txt
grammar/benches/: ast.rs  grammar.rs  main.leo
grammar/src/: ast.rs  leo.pest  lib.rs  main.rs  span.rs
grammar/tests/: annotated.rs  annotated_tests.rs  annotated_tests.rs~  circuits.rs  deprecated.rs  display.rs  expression.rs  function.rs  global_const.rs  imports.rs  mod.rs  multiline.rs  self.rs  tuple.rs
imports/: Cargo.toml
imports/src/: core_package.rs  lib.rs  parse_symbol.rs
input/: Cargo.toml
input/src/: ast.rs  leo-input.pest  lib.rs
interpreter/: Cargo.toml
interpreter/src/: core_functions.rs  cursor.rs  cursor_aleo.rs  dialoguer_input.rs  interpreter.rs  lib.rs  ratatui_ui.rs  test.rs  test_interpreter.rs  ui.rs  util.rs  value.rs
leo-fmt/: Cargo.toml
leo-fmt/src/: format.rs  lib.rs  output.rs
leo-fmt/tests/: harness.rs
leo-inputs/: Cargo.toml  input.leo
leo-inputs/src/: ast.rs  inputs_ast.rs  inputs_display.rs  leo-inputs.pest  lib.rs  main.rs
linter/: Cargo.toml
linter/src/: main.rs
package/: Cargo.toml  README.md
package/src/: lib.rs  package.rs
package/tests/: initialize.rs  mod.rs
span/: Cargo.toml
span/src/: dropless.rs  lib.rs  span.rs  span_json.rs  symbol.rs  tendril_json.rs
state/: Cargo.toml  README.md
state/src/: lib.rs
state/tests/: mod.rs  test.rs  test_verify_local_data_commitment.rs  test_verify_record_commitment.rs
symbol-table/: Cargo.toml
symbol-table/src/: lib.rs  symbol_table.rs
symbol-table/tests/: mod.rs
synthesizer/: Cargo.toml  README.md
synthesizer/src/: circuit_synthesizer.rs  lib.rs  serialized_circuit.rs  serialized_field.rs  serialized_index.rs  summarized_circuit.rs
test-framework/: Cargo.toml
test-framework/src/: error.rs  fetch.rs  lib.rs  output.rs  runner.rs  test.rs
type-inference/: Cargo.toml
type-inference/src/: lib.rs  type_inference.rs
type-inference/tests/: mod.rs
typed/: Cargo.toml
typed/benches/: big_if_else.leo  long_expr.leo  many_foos.leo  typed_ast.rs
typed/src/: annotation.rs  expression.rs  lib.rs  main.rs  program.rs
types/: Cargo.toml
types/benches/: typed_ast.rs
types/src/: assignee.rs  expression.rs  input_value.rs  integer.rs  lib.rs  main.rs  program.rs  range_or_expression.rs
types/tests/: mod.rs
wasm/: Cargo.toml
wasm/src/: asg.rs  ast.rs  compiler.rs  grammar.rs  lib.rs  parser.rs
wasm/tests/: package-lock.json  package.json  tsconfig.json
(+39100 files in other folders)
