[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# leo dependencies
leo-abi             = { path = "./crates/abi",              version = "=3.4.0" }
leo-abi-types       = { path = "./crates/abi-types",        version = "=3.4.0" }
leo-ast             = { path = "./crates/ast",              version = "=3.4.0" }
leo-compiler        = { path = "./crates/compiler",         version = "=3.4.0" }
leo-disassembler    = { path = "./crates/disassembler",     version = "=3.4.0" }
leo-errors          = { path = "./crates/errors",           version = "=3.4.0" }
leo-fmt             = { path = "./crates/fmt",              version = "=3.4.0" }
leo-package         = { path = "./crates/package",          version = "=3.4.0" }
leo-parser          = { path = "./crates/parser",           version = "=3.4.0" }
leo-parser-rowan    = { path = "./crates/parser-rowan",     version = "=3.4.0" }
leo-passes          = { path = "./crates/passes",           version = "=3.4.0" }
leo-span            = { path = "./crates/span",             version = "=3.4.0" }
leo-test-framework  = { path = "./crates/test-framework",   version = "=3.4.0" }
# third party dependencies
aleo-std           = { version = "1.0.3"}
aleo-std-storage   = { version = "1.0.3", default-features = false }
anyhow             = "1.0"
axum               = "0.8.0"
axum-extra         = { version = "0.12", features = [ "erased-json", "typed-header" ] }
backtrace          = "0.3"
base62             = "2.2"
chrono             = "0.4"
clap               = { version = "4.5", features = [ "derive", "env", "color", "unstable-styles" ] }
color-backtrace    = "0.7"
colored            = "3.1"
crossbeam-channel  = "0.5"
crossterm          = "0.29"
ctrlc              = "3.4"
derivative         = "2.2"
dialoguer          = "0.12"
dotenvy            = "0.15"
dunce              = "1.0"
expect-test        = "1.5"
fxhash             = "0.2.1"
http               = "1"
indexmap           = { version = "2.6", features = [ "serde" ] }
is-terminal        = "0.4"
itertools          = "0.14"
logos              = "0.15"
num-format         = "0.4"
num-traits         = "0.2.19"
once_cell          = "1.21"
parking_lot        = "0.12"
paste              = "1.0"
rand               = { version = "0.8", default-features = false }
rand_chacha        = { version = "0.3", default-features = false }
rayon              = "1.11"
regex              = "1.11"
reqwest            = "0.12"
rowan              = "0.16"
rpassword          = "7.4"
scoped-tls         = "1.0"
self_update        = { version = "0.42", features = [ "archive-zip", "compression-zip-deflate" ] }
serde              = { version = "1.0", features = [ "derive", "rc" ] }
serde_json         = { version = "1.0", features = [ "preserve_order" ] }
serial_test        = "3.1"
sha2               = "0.10"
similar            = "2.6"
# We enable "test_consensus_heights" to give developers freedom to set custom consensus version upgrade heights and "test_targets" because the devnode's genesis block was created with the same feature flag.
# TODO: update `rev` to an actual snarkVM tag when available.
snarkvm            = { git = "https://github.com/ProvableHQ/snarkVM.git", tag = "canary-v4.5.3", features = [ "test_consensus_heights", "dev_skip_checks", "test_targets" ] }
sys-info           = "0.9"
tempfile           = "3.20"
thiserror          = "2.0"
tokio              = { version = "1", features = [ "full" ] }
tower-http         = { version = "0.6.0", features = [ "cors", "trace" ] }
tower_governor     = "0.7"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
ureq               = { version = "3.0", features = [ "json" ] }
walkdir            = "2.5"
which              = "8.0"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "off"
incremental = true
debug-assertions = false

[profile.test]
opt-level = 2
lto = "off"
incremental = true
debug = true
debug-assertions = true

[profile.ci]
inherits = "test"
opt-level = 1     # 0 or 1 for fastest compile-times
lto = "off"       # ensure LTO is definitely disabled
incremental = false
debug = false
debug-assertions = false
codegen-units = 32 # HIGH codegen parallelism speeds compile (default is usually 16)
