[package]
name = "leo-lang"
version = "3.5.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "The Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [
  "Cargo.toml",
  "leo",
  "README.md",
  "LICENSE.md",
  "examples/lottery/src/main.leo",
  "examples/lottery/run.sh",
  "examples/tictactoe/src/main.leo",
  "examples/tictactoe/run.sh",
  "examples/token/src/main.leo",
  "examples/token/run.sh"
]
license = "GPL-3.0"
edition = "2024"
rust-version = "1.92.0"

[workspace]
members = [
  "compiler/abi",
  "compiler/abi-types",
  "compiler/ast",
  "compiler/compiler",
  "compiler/parser-lossless",
  "compiler/parser-rowan",
  "compiler/parser",
  "compiler/passes",
  "compiler/span",
  "errors",
  "leo-fmt",
  "interpreter",
  "leo/package",
  "test-framework",
  "utils/disassembler"
]

  [workspace.dependencies]
  anyhow = "1.0"
  axum = "0.8.0"
  backtrace = "0.3"
  base62 = "2.2"
  chrono = "0.4"
  color-backtrace = "0.7"
  colored = "3.1"
  crossbeam-channel = "0.5"
  crossterm = "0.29"
  ctrlc = "3.4"
  derivative = "2.2"
  dialoguer = "0.12"
  dotenvy = "0.15"
  dunce = "1.0"
  expect-test = "1.5"
  fxhash = "0.2.1"
  http = "1"
  is-terminal = "0.4"
  itertools = "0.14"
  lalrpop = "0.22"
  logos = "0.15"
  num-format = "0.4"
  num-traits = "0.2.19"
  once_cell = "1.21"
  parking_lot = "0.12"
  paste = "1.0"
  ratatui = "0.30"
  rayon = "1.11"
  regex = "1.11"
  reqwest = "0.12"
  rowan = "0.16"
  rpassword = "7.4"
  scoped-tls = "1.0"
  similar = "2.6"
  serial_test = "3.1"
  sha2 = "0.10"
  sys-info = "0.9"
  tempfile = "3.20"
  thiserror = "2.0"
  tower_governor = "0.7"
  tracing = "0.1"
  walkdir = "2.5"
  which = "8.0"

    [workspace.dependencies.leo-abi]
    path = "./compiler/abi"
    version = "=3.5.0"

    [workspace.dependencies.leo-abi-types]
    path = "./compiler/abi-types"
    version = "=3.5.0"

    [workspace.dependencies.leo-ast]
    path = "./compiler/ast"
    version = "=3.5.0"

    [workspace.dependencies.leo-compiler]
    path = "./compiler/compiler"
    version = "=3.5.0"

    [workspace.dependencies.leo-disassembler]
    path = "./utils/disassembler"
    version = "=3.5.0"

    [workspace.dependencies.leo-errors]
    path = "./errors"
    version = "=3.5.0"

    [workspace.dependencies.leo-fmt]
    path = "./leo-fmt"
    version = "=3.5.0"

    [workspace.dependencies.leo-interpreter]
    path = "./interpreter"
    version = "=3.5.0"

    [workspace.dependencies.leo-package]
    path = "./leo/package"
    version = "=3.5.0"

    [workspace.dependencies.leo-parser]
    path = "./compiler/parser"
    version = "=3.5.0"

    [workspace.dependencies.leo-parser-lossless]
    path = "./compiler/parser-lossless"
    version = "=3.5.0"

    [workspace.dependencies.leo-parser-rowan]
    path = "./compiler/parser-rowan"
    version = "=3.5.0"

    [workspace.dependencies.leo-passes]
    path = "./compiler/passes"
    version = "=3.5.0"

    [workspace.dependencies.leo-span]
    path = "./compiler/span"
    version = "=3.5.0"

    [workspace.dependencies.leo-test-framework]
    path = "./test-framework"
    version = "=3.5.0"

    [workspace.dependencies.aleo-std]
    version = "1.0.3"

    [workspace.dependencies.aleo-std-storage]
    version = "1.0.3"
    default-features = false

    [workspace.dependencies.axum-extra]
    version = "0.12"
    features = [ "erased-json", "typed-header" ]

    [workspace.dependencies.clap]
    version = "4.5"
    features = [ "derive", "env", "color", "unstable-styles" ]

    [workspace.dependencies.indexmap]
    version = "2.6"
    features = [ "serde" ]

    [workspace.dependencies.lalrpop-util]
    version = "0.22"
    features = [ "unicode" ]

    [workspace.dependencies.rand]
    version = "0.8"
    default-features = false

    [workspace.dependencies.rand_chacha]
    version = "0.3"
    default-features = false

    [workspace.dependencies.self_update]
    version = "0.42"
    features = [ "archive-zip", "compression-zip-deflate" ]

    [workspace.dependencies.serde]
    version = "1.0"
    features = [ "derive", "rc" ]

    [workspace.dependencies.serde_json]
    version = "1.0"
    features = [ "preserve_order" ]

    [workspace.dependencies.snarkvm]
    version = "4.5.0"
    features = [ "test_consensus_heights", "dev_skip_checks", "test_targets" ]

    [workspace.dependencies.tokio]
    version = "1"
    features = [ "full" ]

    [workspace.dependencies.tower-http]
    version = "0.6.0"
    features = [ "cors", "trace" ]

    [workspace.dependencies.tracing-subscriber]
    version = "0.3"
    features = [ "env-filter", "fmt" ]

    [workspace.dependencies.ureq]
    version = "3.0"
    features = [ "json" ]

[lib]
path = "leo/lib.rs"

[[bin]]
name = "leo"
path = "leo/cli/main.rs"

[[test]]
name = "integration"
path = "leo/tests/integration.rs"

[features]
default = [ ]
ci_skip = [ "leo-compiler/ci_skip" ]
noconfig = [ ]
only_testnet = [ ]

[dependencies.leo-abi]
workspace = true

[dependencies.leo-ast]
workspace = true

[dependencies.leo-compiler]
workspace = true

[dependencies.leo-disassembler]
workspace = true

[dependencies.leo-errors]
workspace = true

[dependencies.leo-fmt]
workspace = true

[dependencies.leo-interpreter]
workspace = true

[dependencies.leo-package]
workspace = true

[dependencies.leo-span]
workspace = true

[dependencies.aleo-std]
workspace = true

[dependencies.aleo-std-storage]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.axum-extra]
workspace = true

[dependencies.backtrace]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.crossbeam-channel]
workspace = true

[dependencies.crossterm]
workspace = true

[dependencies.ctrlc]
workspace = true

[dependencies.dialoguer]
workspace = true

[dependencies.dotenvy]
workspace = true

[dependencies.dunce]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.is-terminal]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.num-format]
workspace = true

[dependencies.once_cell]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rand_chacha]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.regex]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.rpassword]
workspace = true

[dependencies.self_update]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serial_test]
workspace = true

[dependencies.similar]
workspace = true

[dependencies.sha2]
workspace = true

[dependencies.snarkvm]
workspace = true

[dependencies.sys-info]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tower-http]
workspace = true

[dependencies.tower_governor]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.ureq]
workspace = true

[dependencies.walkdir]
workspace = true

[dependencies.which]
workspace = true

[dev-dependencies.regex]
workspace = true

[dev-dependencies.which]
workspace = true

[build-dependencies.walkdir]
workspace = true

[target."cfg(unix)".dependencies]
libc = "0.2"

  [target."cfg(unix)".dependencies.nix]
  version = "0.30"
  features = [ "process", "term", "fs", "poll" ]

  [target."cfg(unix)".dependencies.signal-hook]
  version = "0.4"
  features = [ "iterator" ]

[target."cfg(windows)".dependencies]
winapi = "0.3"
ansi_term = "0.12"

  [target."cfg(windows)".dependencies.windows-sys]
  version = "0.61"
  features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_JobObjects"
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "off"
incremental = true
debug-assertions = false

[profile.test]
opt-level = 2
lto = "off"
incremental = true
debug = true
debug-assertions = true

[profile.ci]
inherits = "test"
opt-level = 1
lto = "off"
incremental = false
debug = false
debug-assertions = false
codegen-units = 32
