[workspace]
members = ["crates/*", "crates/compiler/benchmarks"]
resolver = "3"

[workspace.dependencies]
# leo dependencies
leo-abi             = { path = "./crates/abi",              version = "=4.2.0" }
leo-abi-types       = { path = "./crates/abi-types",        version = "=4.2.0" }
leo-ast             = { path = "./crates/ast",              version = "=4.2.0" }
leo-compiler        = { path = "./crates/compiler",         version = "=4.2.0" }
leo-disassembler    = { path = "./crates/disassembler",     version = "=4.2.0" }
leo-errors          = { path = "./crates/errors",           version = "=4.2.0" }
leo-fmt             = { path = "./crates/fmt",              version = "=4.2.0" }
leo-lsp             = { path = "./crates/lsp",              version = "=4.2.0" }
leo-package         = { path = "./crates/package",          version = "=4.2.0" }
leo-parser          = { path = "./crates/parser",           version = "=4.2.0" }
leo-parser-rowan    = { path = "./crates/parser-rowan",     version = "=4.2.0" }
leo-passes          = { path = "./crates/passes",           version = "=4.2.0" }
leo-span            = { path = "./crates/span",             version = "=4.2.0" }
leo-std             = { path = "./crates/leo-std",          version = "=4.2.0" }
leo-test-framework  = { path = "./crates/test-framework" }
# third party dependencies
aleo-std           = { version = "1.0.3"}
aleo-std-storage   = { version = "1.0.3", default-features = false }
anyhow             = "1.0"
ariadne            = "0.6"
axum               = "0.8"
axum-extra         = { version = "0.12", features = [ "erased-json", "typed-header" ] }
backtrace          = "0.3"
base62             = "2.2"
chrono             = "0.4"
clap               = { version = "4.5", features = [ "derive", "env", "color", "unstable-styles" ] }
color-backtrace    = "0.7"
colored            = "3.1"
crossbeam-channel  = "0.5"
crossterm          = "0.29"
ctrlc              = "3.4"
derivative         = "2.2"
dialoguer          = "0.12"
dotenvy            = "0.15"
dunce              = "1.0"
expect-test        = "1.5"
fxhash             = "0.2"
glob               = "0.3"
http               = "1"
indexmap           = { version = "2.6", features = [ "serde" ] }
line-index         = "0.1"
is-terminal        = "0.4"
itertools          = "0.14"
logos              = "0.16"
lsp-server         = "0.7"
lsp-types          = "0.97"
num-format         = "0.4"
num-traits         = "0.2"
once_cell          = "1.21"
parking_lot        = "0.12"
paste              = "1.0"
rand               = { version = "0.10", default-features = false }
rand_chacha        = { version = "0.10", default-features = false }
rayon              = "1.11"
regex              = "1.11"
reqwest            = { version = "0.13", features = ["blocking", "json"] }
rowan              = "0.16"
rpassword          = "7.4"
scoped-tls         = "1.0"
self_update        = { version = "0.44", features = [ "archive-zip", "compression-zip-deflate" ] }
serde              = { version = "1.0", features = [ "derive", "rc" ] }
serde_json         = { version = "1.0", features = [ "preserve_order" ] }
serial_test        = "3.1"
sha2               = "0.11"
similar            = "3.1"
# We enable "test_consensus_heights" to give developers freedom to set custom consensus version upgrade heights and "test_targets" because the devnode's genesis block was created with the same feature flag.
# Uses the published `4.7.3` release, which ships V15 `view fn` support (snarkVM PRs #3238, #3257, #3253).
# `history` is required to compile `Process::evaluate_view_with_history`, the public-facing view entry point.
snarkvm            = { version = "4.7.3", features = [ "test_consensus_heights", "dev_skip_checks", "test_targets", "history" ] }
# Wasm-friendly snarkVM subsets pinned at the same version as the umbrella crate; used by
# `leo-ast` and `leo-disassembler` on `wasm32-unknown-unknown` where the full `snarkvm`
# crate pulls in native-only ledger/package code.
snarkvm-console = { version = "4.7.3", default-features = false, features = [ "account", "program", "types", "dev_skip_checks", "test_consensus_heights", "test_targets", "wasm" ] }
snarkvm-synthesizer-program = { version = "4.7.3", features = [ "wasm" ] }
sys-info           = "0.9"
tempfile           = "3.20"
thiserror          = "2.0"
tree-sitter        = "0.26"
tree-sitter-language = "0.1"
tokio              = { version = "1", features = [ "full" ] }
tower-http         = { version = "0.6.0", features = [ "cors", "trace" ] }
tower_governor     = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
ureq               = { version = "3.0", features = [ "json" ] }
walkdir            = "2.5"
which              = "8.0"
xxhash-rust       = { version = "0.8", features = [ "xxh3" ] }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 1     # Low opt-level keeps incremental rebuilds of workspace crates fast.
lto = "off"
incremental = true
debug-assertions = false

# Build all dependencies (notably the large snarkVM tree) with full optimizations.
# They are compiled once and cached, so this does not affect incremental rebuild
# times, but it keeps runtime fast even though our own crates are barely optimized.
[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 1     # See `profile.dev`; low opt-level for fast workspace rebuilds.
lto = "off"
incremental = true
debug = "line-tables-only" # Enough for file/line in backtraces; far cheaper to emit and link than full debuginfo.
debug-assertions = true

[profile.test.package."*"]
opt-level = 3

[profile.ci]
inherits = "test"
opt-level = 1     # 0 or 1 for fastest compile-times
lto = "off"       # ensure LTO is definitely disabled
incremental = false
debug = false
debug-assertions = false
codegen-units = 32 # HIGH codegen parallelism speeds compile (default is usually 16)

# CI does near-clean builds, so optimizing dependencies would only slow compilation.
# Override the `profile.test` dependency setting inherited above to keep every crate
# at the low opt-level for the fastest possible CI builds.
[profile.ci.package."*"]
opt-level = 1
