[package]
name = "leo-asg-passes"
version = "1.5.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "The Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.56"

[lib]
path = "src/lib.rs"

[dependencies.leo-asg]
path = "../asg"
version = "1.5.3"

[dependencies.leo-errors]
path = "../errors"
version = "1.5.3"

[dependencies.dot]
version = "0.1.4"

[dependencies.petgraph]
version = "0.6.0"

