[package]
name = "leo-ast-passes"
version = "1.5.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "The Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
indexmap = "1.7.0"

[dependencies.leo-ast]
path = "../ast"
version = "1.5.3"

[dependencies.leo-errors]
path = "../errors"
version = "1.5.3"

[dependencies.leo-parser]
path = "../parser"
version = "1.5.3"

[dependencies.leo-stdlib]
path = "../stdlib"
version = "1.5.3"