[package]
name = "leo-ast"
version = "1.0.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Core AST of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[[bin]]
name = "leo_ast"
path = "src/main.rs"

[[bench]]
name = "leo_ast"
path = "benches/leo_ast.rs"
harness = false

[dependencies.leo-grammar]
path = "../grammar"
version = "1.0.5"

[dependencies.leo-input]
path = "../input"
version = "1.0.5"

[dependencies.snarkos-errors]
version = "1.1.3"
default-features = false

[dependencies.snarkos-models]
version = "1.1.3"
default-features = false

[dependencies.pest]
version = "2.0"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dev-dependencies.criterion]
version = "0.3"

[features]
default = [ ]
ci_skip = [ "leo-grammar/ci_skip" ]
