[package]
name = "leo-ast"
version = "1.5.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Core AST of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-input]
path = "../input"
version = "1.5.3"

[dependencies.leo-errors]
path = "../errors"
version = "1.5.3"

[dependencies.eyre]
version = "0.6.5"
default-features = false

[dependencies.indexmap]
version = "1.7.0"
features = [ "serde-1" ]

[dependencies.pest]
version = "2.0"

[dependencies.serde]
version = "1.0"
features = [ "derive", "rc" ]

[dependencies.serde_json]
version = "1.0"

[dependencies.anyhow]
version = "1.0"

[dependencies.thiserror]
version = "1.0"

[dependencies.tendril]
version = "0.4"

[dev-dependencies.criterion]
version = "0.3"

[features]
default = [ ]
ci_skip = [ ]
