[package]
name = "leo-compiler"
version = "1.5.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Compiler of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.5.1"

[dependencies.leo-imports]
path = "../imports"
version = "1.5.1"

[dependencies.leo-input]
path = "../input"
version = "1.5.1"

[dependencies.leo-package]
path = "../package"
version = "1.5.1"

[dependencies.leo-state]
path = "../state"
version = "1.5.1"

[dependencies.leo-asg]
path = "../asg"
version = "1.5.1"

[dependencies.leo-parser]
path = "../parser"
version = "1.5.1"

[dependencies.leo-asg-passes]
path = "../asg-passes"
version = "1.5.1"

[dependencies.leo-synthesizer]
path = "../synthesizer"
version = "1.5.1"

[dependencies.tendril]
version = "0.4"

[dependencies.snarkvm-curves]
version = "0.5.4"
default-features = false

[dependencies.snarkvm-fields]
version = "0.5.4"
default-features = false

[dependencies.snarkvm-dpc]
version = "0.5.4"
default-features = false

[dependencies.snarkvm-gadgets]
version = "0.5.4"
default-features = false

[dependencies.snarkvm-r1cs]
version = "0.5.4"
default-features = false

[dependencies.snarkvm-utilities]
version = "0.5.4"

[dependencies.bincode]
version = "1.3"

[dependencies.hex]
version = "0.4.2"

[dependencies.indexmap]
version = "1.6.2"
features = [ "serde-1" ]

[dependencies.pest]
version = "2.0"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1.0"

[dependencies.sha2]
version = "0.9"

[dependencies.thiserror]
version = "1.0"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.num-bigint]
version = "0.4"

[dev-dependencies.rand_core]
version = "0.6.2"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[dev-dependencies.snarkvm-algorithms]
version = "0.5.4"
default-features = false

[dev-dependencies.tempfile]
version = "3.0.4"

[dev-dependencies.serde_yaml]
version = "0.8"

[dev-dependencies.leo-test-framework]
path = "../test-framework"
version = "1.4.0"

[features]
default = [ ]
ci_skip = [ "leo-ast/ci_skip" ]
