[package]
name = "leo-compiler"
version = "1.5.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Compiler of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.5.2"

[dependencies.leo-imports]
path = "../imports"
version = "1.5.2"

[dependencies.leo-package]
path = "../package"
version = "1.5.2"

[dependencies.leo-state]
path = "../state"
version = "1.5.2"

[dependencies.leo-asg]
path = "../asg"
version = "1.5.2"

[dependencies.leo-parser]
path = "../parser"
version = "1.5.2"

[dependencies.leo-asg-passes]
path = "../asg-passes"
version = "1.5.2"

[dependencies.leo-synthesizer]
path = "../synthesizer"
version = "1.5.2"

[dependencies.tendril]
version = "0.4"

[dependencies.anyhow]
version = "1.0"

[dependencies.snarkvm-ir]
version = "0.6.0"
path = "/home/p/aleo/snarkVM/ir"

[dependencies.snarkvm-r1cs]
version = "0.6.0"
path = "/home/p/aleo/snarkVM/r1cs"

[dependencies.bincode]
version = "1.3"

[dependencies.hex]
version = "0.4.2"

[dependencies.indexmap]
version = "1.6.2"
features = [ "serde-1" ]

[dependencies.pest]
version = "2.0"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1.0"

[dependencies.sha2]
version = "0.9"

[dependencies.thiserror]
version = "1.0"

[dependencies.tracing]
version = "0.1"

[dependencies.bech32]
version = "0.8"

[dependencies.num-bigint]
version = "0.4"

[dependencies.snarkvm-eval]
version = "0.6.0"
path = "/home/p/aleo/snarkVM/eval"

[dev-dependencies.snarkvm-curves]
version = "0.6.0"
path = "/home/p/aleo/snarkVM/curves"

[dev-dependencies.rand_core]
version = "0.6.3"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[dev-dependencies.tempfile]
version = "3.0.4"

[dev-dependencies.serde_yaml]
version = "0.8"

[dev-dependencies.leo-test-framework]
path = "../test-framework"
version = "1.4.0"

[features]
default = [ ]
ci_skip = [ "leo-ast/ci_skip" ]
