[package]
name = "leo-compiler"
version = "1.5.3"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Compiler of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.5.3"

[dependencies.leo-errors]
path = "../errors"
version = "1.5.3"

[dependencies.eyre]
version = "0.6.5"
default-features = false

[dependencies.leo-imports]
path = "../imports"
version = "1.5.3"

[dependencies.leo-input]
path = "../input"
version = "1.5.3"

[dependencies.leo-package]
path = "../package"
version = "1.5.3"

[dependencies.leo-state]
path = "../state"
version = "1.5.3"

[dependencies.leo-asg]
path = "../asg"
version = "1.5.3"

[dependencies.leo-parser]
path = "../parser"
version = "1.5.3"

[dependencies.leo-asg-passes]
path = "../asg-passes"
version = "1.5.3"

[dependencies.leo-ast-passes]
path = "../ast-passes"
version = "1.5.3"

[dependencies.leo-synthesizer]
path = "../synthesizer"
version = "1.5.3"

[dependencies.tendril]
version = "0.4"

#todo 0rphon
[dependencies.snarkvm-ir]
version = "0.7.9"
# path = "D:\\Work\\leo_repos\\snarkVM\\ir"
git = "https://github.com/AleoHQ/snarkVM"
branch = "feature/bits-bytes-ir-core-circuits"

[dependencies.snarkvm-r1cs]
version = "0.7.9"
# path = "D:\\Work\\leo_repos\\snarkVM\\ir"
git = "https://github.com/AleoHQ/snarkVM"
branch = "feature/bits-bytes-ir-core-circuits"

[dependencies.bincode]
version = "1.3"

[dependencies.indexmap]
version = "1.7.0"
features = [ "serde-1" ]

[dependencies.pest]
version = "2.0"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1.0"

[dependencies.sha2]
version = "0.9"

[dependencies.tracing]
version = "0.1"

[dependencies.bech32]
version = "0.8"

[dependencies.num-bigint]
version = "0.4"

#todo 0rphon
[dependencies.snarkvm-eval]
version = "0.7.9"
# path = "D:\\Work\\leo_repos\\snarkVM\\eval"
git = "https://github.com/AleoHQ/snarkVM"
branch = "feature/bits-bytes-ir-core-circuits"

[dependencies.snarkvm-curves]
version = "0.7.9"
# path = "D:\\Work\\leo_repos\\snarkVM\\eval"
git = "https://github.com/AleoHQ/snarkVM"
branch = "feature/bits-bytes-ir-core-circuits"

[dev-dependencies.rand_core]
version = "0.6.3"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[dev-dependencies.tempfile]
version = "3.0.4"

[dev-dependencies.serde_yaml]
version = "0.8"

[dev-dependencies.leo-test-framework]
path = "../test-framework"
version = "1.4.0"

[features]
default = [ ]
ci_skip = [ "leo-ast/ci_skip" ]
