[package]
name = "leo-core"
version = "1.0.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Core package dependencies of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.0.5"

[dependencies.leo-gadgets]
path = "../gadgets"
version = "1.0.5"

[dependencies.snarkos-errors]
version = "1.1.3"
default-features = false

[dependencies.snarkos-gadgets]
version = "1.1.3"
default-features = false

[dependencies.snarkos-models]
version = "1.1.3"
default-features = false

[dependencies.snarkos-utilities]
version = "1.1.3"

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.rand_xorshift]
version = "0.2"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.snarkos-utilities]
version = "1.1.3"

[dev-dependencies.snarkos-curves]
version = "1.1.3"
default-features = false
