[package]
name = "leo-core"
version = "1.0.7"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Core package dependencies of the Leo programming language"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.leo-ast]
path = "../ast"
version = "1.0.7"

[dependencies.leo-gadgets]
path = "../gadgets"
version = "1.0.7"

[dependencies.snarkvm-errors]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "ce04949"
version = "0.0.1"
default-features = false

[dependencies.snarkvm-gadgets]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "ce04949"
version = "0.0.1"
default-features = false

[dependencies.snarkvm-models]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "ce04949"
version = "0.0.1"
default-features = false

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "ce04949"
version = "0.0.1"

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.rand_xorshift]
version = "0.2"
default-features = false

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "ce04949"
version = "0.0.1"

[dev-dependencies.snarkvm-curves]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "ce04949"
version = "0.0.1"
default-features = false
