[package]
name = "leo-errors"
version = "3.4.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Errors for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"

[dependencies]
# leo dependencies
leo-span         = { workspace = true }
# third party dependencies
anyhow           = { workspace = true }
backtrace        = { workspace = true }
colored          = { workspace = true }
color-backtrace  = { workspace = true }
derivative       = { workspace = true }
itertools        = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
