[package]
name = "leo-errors"
version = "3.5.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Errors for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"

[dependencies.leo-span]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.backtrace]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.color-backtrace]
workspace = true

[dependencies.derivative]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.thiserror]
workspace = true
